--- a/Example/UHNTimeSeriesPlotView/Base.lproj/Main_iPhone.storyboard
+++ b/Example/UHNTimeSeriesPlotView/Base.lproj/Main_iPhone.storyboard
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="UHNViewController" sceneMemberID="viewController">
@@ -15,8 +17,137 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XhU-0A-M31" userLabel="Plot Container">
+                                <rect key="frame" x="16" y="28" width="288" height="180"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zi3-AP-aFj" customClass="UHNScrollingTimeSeriesPlotView">
+                                        <rect key="frame" x="8" y="8" width="272" height="164"/>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="164" id="AgW-da-eCy"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="grid" destination="QCS-RA-jaY" id="twZ-Qo-UDD"/>
+                                        </connections>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCS-RA-jaY" customClass="UHNGraphGridLines">
+                                        <rect key="frame" x="8" y="8" width="272" height="164"/>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="164" id="aku-OZ-xbo"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="graph" destination="zi3-AP-aFj" id="ACe-Gs-SIw"/>
+                                        </connections>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="QCS-RA-jaY" firstAttribute="top" secondItem="XhU-0A-M31" secondAttribute="top" constant="8" id="5T4-y1-bGn"/>
+                                    <constraint firstAttribute="trailing" secondItem="QCS-RA-jaY" secondAttribute="trailing" constant="8" id="IBa-vo-9et"/>
+                                    <constraint firstItem="QCS-RA-jaY" firstAttribute="leading" secondItem="XhU-0A-M31" secondAttribute="leading" constant="8" id="OGC-rL-Dtq"/>
+                                    <constraint firstItem="QCS-RA-jaY" firstAttribute="centerY" secondItem="zi3-AP-aFj" secondAttribute="centerY" id="Yyg-Gb-WUh"/>
+                                    <constraint firstAttribute="centerX" secondItem="QCS-RA-jaY" secondAttribute="centerX" id="afv-6A-NNx"/>
+                                    <constraint firstItem="QCS-RA-jaY" firstAttribute="centerX" secondItem="zi3-AP-aFj" secondAttribute="centerX" id="dwk-bj-Lq4"/>
+                                    <constraint firstAttribute="height" constant="180" id="l0C-fC-f3v"/>
+                                    <constraint firstItem="zi3-AP-aFj" firstAttribute="leading" secondItem="XhU-0A-M31" secondAttribute="leading" constant="8" id="vM8-I0-vaA"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V1z-WJ-iIx">
+                                <rect key="frame" x="16" y="216" width="288" height="177"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d9m-T4-vN2" userLabel="Stroke Width Container">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="44"/>
+                                        <subviews>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="7Sg-oT-cEv" userLabel="Stroke Width Slider">
+                                                <rect key="frame" x="-2" y="8" width="292" height="31"/>
+                                                <connections>
+                                                    <action selector="sliderDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="NQB-cw-9bq"/>
+                                                </connections>
+                                            </slider>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stroke Width" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8S2-Ut-29s">
+                                                <rect key="frame" x="0.0" y="8" width="61" height="12"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="12" id="VtF-g4-sis"/>
+                                                    <constraint firstAttribute="width" constant="61" id="Wb4-On-Qs3"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="7Sg-oT-cEv" secondAttribute="trailing" id="Fz7-gc-kmh"/>
+                                            <constraint firstAttribute="height" constant="44" id="Kvm-jw-enC"/>
+                                            <constraint firstItem="7Sg-oT-cEv" firstAttribute="top" secondItem="d9m-T4-vN2" secondAttribute="top" constant="8" id="MEc-NX-EmA"/>
+                                            <constraint firstItem="8S2-Ut-29s" firstAttribute="top" secondItem="d9m-T4-vN2" secondAttribute="top" constant="8" id="cvX-dE-0if"/>
+                                            <constraint firstItem="8S2-Ut-29s" firstAttribute="leading" secondItem="d9m-T4-vN2" secondAttribute="leading" id="h4e-cd-kf3"/>
+                                            <constraint firstItem="7Sg-oT-cEv" firstAttribute="leading" secondItem="d9m-T4-vN2" secondAttribute="leading" id="n5l-L0-yQk"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Generate Data" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KH-EG-Pa8">
+                                        <rect key="frame" x="60" y="57" width="112" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2Xq-J2-8Mx">
+                                        <rect key="frame" x="180" y="52" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="switchDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="fJ8-R5-pav"/>
+                                        </connections>
+                                    </switch>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hide Plot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNg-hX-AFs">
+                                        <rect key="frame" x="60" y="108" width="71" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kvp-rn-llH">
+                                        <rect key="frame" x="180" y="103" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="switchDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="TAj-MA-gDf"/>
+                                        </connections>
+                                    </switch>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sei-cq-moV">
+                                        <rect key="frame" x="124" y="139" width="40" height="30"/>
+                                        <state key="normal" title="Reset">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="resetButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="iTD-xr-Dwp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="d9m-T4-vN2" firstAttribute="leading" secondItem="V1z-WJ-iIx" secondAttribute="leading" id="4KR-jd-Po9"/>
+                                    <constraint firstAttribute="height" constant="177" id="Uwz-kN-xru"/>
+                                    <constraint firstItem="d9m-T4-vN2" firstAttribute="top" secondItem="V1z-WJ-iIx" secondAttribute="top" id="VI3-lh-zC6"/>
+                                    <constraint firstAttribute="trailing" secondItem="d9m-T4-vN2" secondAttribute="trailing" id="qfW-dw-AEW"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XhU-0A-M31" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="0ED-Up-cgt"/>
+                            <constraint firstAttribute="centerX" secondItem="V1z-WJ-iIx" secondAttribute="centerX" id="3xM-or-6BZ"/>
+                            <constraint firstAttribute="centerX" secondItem="XhU-0A-M31" secondAttribute="centerX" id="TcH-m1-m5v"/>
+                            <constraint firstItem="V1z-WJ-iIx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Zsc-2i-qaf"/>
+                            <constraint firstItem="XhU-0A-M31" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="b5k-96-1gL"/>
+                            <constraint firstItem="V1z-WJ-iIx" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="iok-lO-Emi"/>
+                            <constraint firstItem="XhU-0A-M31" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="xfb-tW-6Ly"/>
+                            <constraint firstItem="V1z-WJ-iIx" firstAttribute="top" secondItem="XhU-0A-M31" secondAttribute="bottom" constant="8" id="zyg-QX-2bf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="generateDataSwitch" destination="2Xq-J2-8Mx" id="Uk0-Hz-DCw"/>
+                        <outlet property="hidePlotSwitch" destination="kvp-rn-llH" id="pyE-DV-W6W"/>
+                        <outlet property="plotView" destination="zi3-AP-aFj" id="a3K-FL-tYo"/>
+                        <outlet property="strokeWidthSlider" destination="7Sg-oT-cEv" id="1XK-VO-v0d"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
